deploy/knative/install.yml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kourier-ingress
  namespace: knative-serving
spec:
  rules:
    - host: "*.default.knative.10.131.36.27.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kourier
                port:
                  number: 80
    - host: "*.msc.knative.10.131.36.27.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kourier
                port:
                  number: 80
