deploy/knative/knative-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kourier-ingress
  namespace: kourier-system
spec:
  rules:
    - host: "*.knative.10.131.36.27.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kourier
                port:
                  number: 80
    - host: "*.default.knative.10.131.36.27.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kourier
                port:
                  number: 80
    - host: "*.msc.knative.10.131.36.27.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kourier
                port:
                  number: 80
